--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -103,7 +103,7 @@
 \date{today}
 
 \begin{document}
-
+\frontmatter
 \chapter*{Abstract}
 Theoretical condensed matter research is plagued by a fundamental issue of complexity. The sheer amount of degrees of freedom in a material on any technologically relevant scale is overwhelming (e.g. $\sim10^{23}$ electrons per cm$^3$), and makes it impossible to describe the quantum mechanical wavefunction exactly.
 
@@ -132,8 +132,10 @@ And finally, the coupling between ferroelectricity and strain in BaTiO$_3$ leads
 
 We utilize both theoretical and computational tools to understand the nature of these interactions, how they lead to cross-order coupling in these materials, and how this then translates into the experimentally observed behavior.
 % \chapter*{Acknowledgements}
+% \Include{Publications}
+\setcounter{tocdepth}{1}
 \tableofcontents
-
+\mainmatter
 % \Include{Introduction}
 % \Include{Theory}
 % \Include{Rashba}
