--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -439,6 +439,10 @@ The results of the former are shown in Fig.~\ref{fig:BTO_bending_sim}.
 	\IncludeGraphics{2D_bending}
 	\caption{\label{fig:BTO_bending_sim}{\bf Bending Wall} Simulations where the bottom of the wall is kept fixed to the equilibrium without a tip. In each panel, the coloring indicates the position where the tip is aplied to the sample. a) Surface profile of the wall. b) Polarization distribution at the surface. c) Deformation of the surface after applying the tip. d) Maximum absolute value of the deformation in (c). e) Relative stiffness depending on where the tip is applied.}
 \end{figure}
+\begin{figure}[h!]
+	\IncludeGraphics{2D_sliding}
+	\caption{\label{fig:BTO_sliding_sim}{\bf Sliding Wall} Simulations where the bottom of the wall is allowed to change. The panels denote the same as in Fig.~\ref{fig:BTO_bending_sim} Allowing the wall to fully slide leads to a bigger softening and wider softening region.}
+\end{figure}
 As seen in Fig.~\ref{fig:BTO_bending_sim}(e) and Fig.~\ref{fig:BTO_sliding_sim}(e), and predicted by the above statements, the wall is softest not in the center, but rather at the point where $u'$ or $\varepsilon_{xz}$ is highest.
 This leads to the highest force applied to the wall that either makes it bend or slide.
 Comparing the two simulation protocols, we can also see that when the wall is allowed to slide, the region where softening takes place is much wider, and the extent of the softening is higher.
